--- a/style.css
+++ b/style.css
@@ -13,6 +13,23 @@
     .main{
         display: flex;
     }
+    .kaft{
+
+        color: grey;
+    }
+    #rightside{
+        padding: 20px;
+        background-color: antiquewhite;
+    }
+    #butoni{
+        height: 52px;
+        width: 107px;
+        background-color: blue;
+        border-radius: 30px;
+        text-align: center;
+        color: white;
+        float: right;
+    }
     .bardhe{
         color: white;
     }
